# train-trm

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  PRE_COMMIT_CHECKLIST.md  README.md  Trunk.toml  WEB_UI.md  build.rs  index.html
docs/: architecture.md  design.md  plan.md  playwright-problems.txt  prd.md  process.md  status.md
examples/: maze_demo.rs  train_demo.rs
scripts/: README.md  build.sh  clean.sh  demo.sh  eval.sh  format.sh  test.sh  train.sh  web-build.sh  web-serve.sh
src/: lib.rs  main.rs  web.rs
src/data/: maze.rs  mod.rs  tasks.rs
src/model/: mod.rs  network.rs  trm.rs
src/training/: loss.rs  mod.rs
src/utils/: mod.rs
src/web/: app.rs  mod.rs
src/web/components/: evaluation_panel.rs  maze_visualizer.rs  mod.rs  training_panel.rs
